apps/base/dev-concourse/deploy/postgres/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsql
  labels:
    app.kubernetes.io/name: pgsql
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pgsql
  serviceName: "pgsql"
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgsql
    spec:
      containers:
      - name: pgsql
        image: "registry.intra.k8s.test/concourse-postgres:15.2-alpine3.17"
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          name: pgsql
        securityContext:
          runAsNonRoot: true
          runAsUser: 70 # postgres
          readOnlyRootFilesystem: true
        readinessProbe:
           exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} -h 127.0.0.1
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
          readOnly: true
        - name: pgsql-pv-claim
          mountPath: /var/lib/postgresql/data
          subPath: data
        - name: run-volume
          mountPath: /var/run/postgresql/
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: tz-config
        hostPath:
          path: /etc/localtime
      - name: run-volume
        emptyDir: {}
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
  volumeClaimTemplates:
  - metadata:
      name: pgsql-pv-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn-high-durability
      resources:
        requests:
          storage: 1G
