apps/base/dev-concourse/deploy/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql
spec:
  clusterIP: None
  ports:
  - port: 5432
  selector:
    app.kubernetes.io/name: pgsql
